# simple-particles

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
lib/: libSDL2_image-2.0.0.dylib
lib/cmake/SDL2_image/: sdl2_image-config.cmake
src/: main.cpp  vector2.cpp  vector2.h
src/particles/: particle.h  particleSystem.cpp  particleSystem.h
